--- a/src/app/main-content/videoplayer/video-edit/video-edit.component.html
+++ b/src/app/main-content/videoplayer/video-edit/video-edit.component.html
@@ -1,33 +1,44 @@
 <div class="edit-head">
-    <div (click)="getBack()" class="edit-head-btn">
-        <mat-icon>arrow_back</mat-icon>
-    </div>
-    <h2>Videoinformationen bearbeiten</h2>
+  <div (click)="getBack()" class="edit-head-btn">
+    <mat-icon>arrow_back</mat-icon>
+  </div>
+  <h2>Videoinformationen bearbeiten</h2>
 </div>
 
-<form class="settings-form" [formGroup]="videoEditForm" (ngSubmit)="saveEditedVideo()">
-    <!--Videotitle-->
-    <div class="form-group custom-input-settings">
-      <mat-form-field>
-        <mat-label>Titel</mat-label>
-        <input matInput formControlName="title" type="text" />
-        <mat-error *ngIf="videoEditForm.get('title')?.invalid && videoEditForm.get('title')?.touched">
-          Der Titel muss zwischen 4 und 20 Zeichen lang sein 
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Genre</mat-label>
-        <mat-select formControlName="genre" required>
-          <mat-option>--</mat-option>
-          @for (genre of genres; track genre) {
-            <mat-option [value]="genre">{{ genre }}</mat-option>
-          }
-        </mat-select>
-        <mat-error *ngIf="videoEditForm.get('genre')?.hasError">Bitte wähle ein Genre</mat-error>
-      </mat-form-field>
-    </div>
-  
-    <!-- <div class="form-group custom-input-settings">
+<form
+  class="settings-form"
+  [formGroup]="videoEditForm"
+  (ngSubmit)="saveEditedVideo()"
+>
+  <!--Videotitle-->
+  <div class="form-group custom-input-settings">
+    <mat-form-field>
+      <mat-label>Titel</mat-label>
+      <input matInput formControlName="title" type="text" />
+      <mat-error
+        *ngIf="
+          videoEditForm.get('title')?.invalid &&
+          videoEditForm.get('title')?.touched
+        "
+      >
+        Der Titel muss zwischen 4 und 20 Zeichen lang sein
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Genre</mat-label>
+      <mat-select formControlName="genre" required>
+        <mat-option>--</mat-option>
+        @for (genre of genres; track genre) {
+        <mat-option [value]="genre">{{ genre }}</mat-option>
+        }
+      </mat-select>
+      <mat-error *ngIf="videoEditForm.get('genre')?.hasError"
+        >Bitte wähle ein Genre</mat-error
+      >
+    </mat-form-field>
+  </div>
+
+  <!-- <div class="form-group custom-input-settings">
       <mat-form-field>
         <mat-label>Genre</mat-label>
         <input matInput formControlName="genre" type="text" />
@@ -36,40 +47,54 @@
         </mat-error>
       </mat-form-field>
     </div> -->
-  
-    <!---->
-    <div class="form-group custom-input-settings">
-      <mat-form-field>
-        <mat-label>Beschreibung</mat-label>
-        <textarea minlength="10" matInput formControlName="description" type="text"></textarea>
-        <mat-error *ngIf="videoEditForm.get('description')?.invalid && videoEditForm.get('description')?.touched">
-          Bitte gib eine kurze Beschreibung, bestehend aus mindestens 10 Zeichen, zu deinem Video an
-        </mat-error>
-      </mat-form-field>
-    </div>
 
-    <!--Buttons for saving and make them editable-->
-    <div class="btn-group">
-        <div class="btns">
-            <button type="button" class="enabled" (click)="getBack()">Abbrechen</button>
-            <button class="enabled" type="submit">Speichern</button>
-        </div>
-        <div class="delete-btn">
-            <div (click)="deleteCurrentVideo()" class="del-b">
-                <span>Löschen</span>
-                <mat-icon>delete</mat-icon>
-            </div>
-        </div>
+  <!---->
+  <div class="form-group custom-input-settings">
+    <mat-form-field>
+      <mat-label>Beschreibung</mat-label>
+      <textarea
+        minlength="10"
+        matInput
+        formControlName="description"
+        type="text"
+      ></textarea>
+      <mat-error
+        *ngIf="
+          videoEditForm.get('description')?.invalid &&
+          videoEditForm.get('description')?.touched
+        "
+      >
+        Bitte gib eine kurze Beschreibung, bestehend aus mindestens 10 Zeichen,
+        zu deinem Video an
+      </mat-error>
+    </mat-form-field>
+  </div>
+
+  <!--Buttons for saving and make them editable-->
+  <div class="btn-group">
+    <div class="btns">
+      <button type="button" class="enabled" (click)="getBack()">
+        <mat-icon>arrow_backwards</mat-icon><b>Abbrechen</b>
+      </button>
+      <button class="enabled" type="submit">
+        <mat-icon>save</mat-icon><b>Speichern</b>
+      </button>
     </div>
-  </form>
-  
-  <ngx-spinner
-    bdColor="rgba(0, 0, 0, 0.8)"
-    size="medium"
-    color="#fff"
-    type="fire"
-    [fullScreen]="true"
-    name="editSpinner"
-    ><p style="color: white">Wir löschen gerade dein Video...</p></ngx-spinner
-  >
-  
+    <div class="delete-btn">
+      <div (click)="deleteCurrentVideo()" class="del-b">
+        <span>Löschen</span>
+        <mat-icon>delete</mat-icon>
+      </div>
+    </div>
+  </div>
+</form>
+
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="fire"
+  [fullScreen]="true"
+  name="editSpinner"
+  ><p style="color: white">Wir löschen gerade dein Video...</p></ngx-spinner
+>
