--- a/src/app/foot/ppolicy/ppolicy.component.scss
+++ b/src/app/foot/ppolicy/ppolicy.component.scss
@@ -8,19 +8,34 @@
   @media (max-width: 1920px) {
     margin: 0 32px;
   }
+  @media (max-width: 860px) {
+    margin: 0 16px;
+  }
   color: #ffffffff;
 
   > h1 {
     font-size: 48px;
+    @media (max-width: 860px) {
+      font-size: 36px;
+    }
   }
   > h2 {
     font-size: 40px;
+    @media (max-width: 860px) {
+      font-size: 28px;
+    }
   }
   > h3 {
     font-size: 32px;
+    @media (max-width: 860px) {
+      font-size: 22px;
+    }
   }
   > p {
     font-size: 24px;
+    @media (max-width: 860px) {
+      font-size: 18px;
+    }
   }
 }
 
