--- a/src/app/head/logged-header/logged-header.component.scss
+++ b/src/app/head/logged-header/logged-header.component.scss
@@ -23,33 +23,9 @@
   > .left-cont {
     @include dFlex(row, flex-start, center);
     gap: 24px;
-    > .logo {
-      &:hover {
-        cursor: pointer;
-      }
-      @include dFlex(row, flex-start, center);
-      > span {
-        color: #e50815;
-        font-size: 32px;
-        font-weight: 700;
-      }
-      > .n-letter {
-        color: #ffffff;
-        padding: 0px 4px;
-      }
-    }
-    > .menu {
-      @include dFlex(row, flex-start, center);
-      gap: 24px;
-      > span {
-        transition: all 0.15s ease-in-out;
-        color: #ffffff;
-        font-size: 18px;
-        font-weight: 700;
-        &:hover {
-          cursor: pointer;
-          text-decoration: underline;
-        }
+    > img {
+      @media (max-width: 560px) {
+        height: 40px;
       }
     }
   }
@@ -67,6 +43,10 @@
         height: 38px;
         width: 38px;
         margin-right: 8px;
+        @media (max-width: 560px) {
+          height: 32px;
+          width: 32px;
+        }
       }
       .arrow-drop-up {
         transition: all 150ms ease-in-out;
@@ -75,6 +55,11 @@
         height: 32px;
         width: 32px;
         font-size: 32px;
+        @media (max-width: 560px) {
+          height: 28px;
+          width: 28px;
+          font-size: 28px;
+        }
       }
       .arrow-drop-down {
         transition: all 150ms ease-in-out;
@@ -82,6 +67,11 @@
         width: 32px;
         font-size: 32px;
         color: #2e3edf !important;
+        @media (max-width: 560px) {
+          height: 28px;
+          width: 28px;
+          font-size: 28px;
+        }
       }
     }
   }
@@ -92,6 +82,9 @@
   color: #2e3edf;
   font-size: 18px;
   font-weight: 700;
+  @media (max-width: 560px) {
+    font-size: 16px;
+  }
 }
 
 ::ng-deep .mat-mdc-menu-content {
@@ -116,4 +109,9 @@
 
 .blue {
   color: #2e3edf !important;
+  @media (max-width: 560px) {
+    height: 20px;
+    width: 20px;
+    font-size: 20px;
+  }
 }
