--- a/src/app/main-content/profile/my-videos/my-videos.component.scss
+++ b/src/app/main-content/profile/my-videos/my-videos.component.scss
@@ -11,6 +11,10 @@
       height: 100%;
       overflow-y: scroll;
     }
+    @media (max-height: 950px) {
+      justify-content: center;
+      overflow-y: unset !important;
+    }
     > .item {
         // width: 450px;
         // height: 450px;
