--- a/src/app/main-content/profile/profile.component.scss
+++ b/src/app/main-content/profile/profile.component.scss
@@ -11,6 +11,9 @@ section {
     height: 820px;
     gap: 8px;
     @include dFlex(row, flex-start, flex-start);
+    @media (max-height: 940px) {
+      overflow-y: scroll;
+    }
     @media (max-width: 560px) {
       @include dFlex(column, center, center);
     }
@@ -76,6 +79,9 @@ section {
       @media (max-width: 980px) {
         width: 70%;
       }
+      @media (max-height: 940px) {
+        height: 100%;
+      }
       @media (max-width: 760px) {
         margin-right: 16px;
       }
@@ -83,7 +89,7 @@ section {
         width: 80%;
       }
       @media (max-width: 640px) {
-        width: 88%;
+        width: 90%;
       }
       @media (max-width: 400px) {
         width: 90%;
@@ -92,8 +98,8 @@ section {
       > h1 {
         font-size: 40px;
         margin-top: 12px;
-        @media (max-width: 400px) {
-          font-size: 36px;
+        @media (max-width: 600px) {
+          font-size: 32px;
       }
       }
     }
@@ -203,6 +209,13 @@ span {
     border-radius: 12px;
     box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
       -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
+      @media (max-width: 860px) {
+        border: none;
+        border-radius: 0px;
+        box-shadow: none;
+        width: 100%;
+        height: 100%;
+      }
   }
 }
 
