--- a/src/app/main-content/videoplayer/video-edit/video-edit.component.scss
+++ b/src/app/main-content/videoplayer/video-edit/video-edit.component.scss
@@ -5,9 +5,18 @@
   width: 100%;
   gap: 16px;
   padding-left: 24px;
+  @media (max-width: 860px) {
+    padding-left: 16px;
+  }
   > h2 {
     font-size: 40px;
     color: #ffffff;
+    @media (max-width: 860px) {
+      font-size: 32px;
+    }
+    @media (max-width: 450px) {
+      font-size: 28px;
+    }
   }
   > .edit-head-btn {
     @include dFlex(row, flex-start, center);
@@ -18,6 +27,9 @@
       cursor: pointer;
       background-color: #5460e5;
     }
+    @media (max-width: 450px) {
+      padding: 8px;
+    }
   }
 }
 
@@ -26,6 +38,10 @@
   @include dFlex(column, center, flex-start);
   min-width: 600px;
   max-width: 1200px;
+  @media (max-width: 860px) {
+    min-width: auto;
+    padding: 16px;
+  }
   > .form-group {
     width: 100%;
     @include dFlex(row, center, center);
@@ -54,6 +70,9 @@
       width: 70%;
       @include dFlex(row, flex-start, center);
       gap: 48px;
+      @media (max-width: 650px) {
+        gap: 16px;
+      }
       > button {
         color: #ffffff;
         font-size: 18px;
@@ -63,6 +82,21 @@
         outline: none;
         border-radius: 40px;
         background-color: #2e3edf;
+        > mat-icon {
+          display: none;
+          @media (max-width: 450px) {
+            display: block;
+          }
+        }
+
+        @media (max-width: 650px) {
+          width: auto;
+        }
+        @media (max-width: 450px) {
+          > b {
+            display: none;
+          }
+        }
       }
       > .enabled {
         transition: all 250ms ease-in-out;
@@ -84,6 +118,10 @@
         padding: 16px;
         border-radius: 12px;
         background-color: #0f21e2;
+        @media (max-width: 650px) {
+          width: auto;
+          gap: 0px;
+        }
         &:hover {
             background-color: #0011ca;
             color: #ffffff;
@@ -98,6 +136,9 @@
         > span {
             font-weight: 500;
             font-size: 18px;
+            @media (max-width: 450px) {
+              display: none;
+            }
         }
       }
     }
@@ -139,6 +180,12 @@ textarea {
   color: #a4a4a4 !important;
   &::placeholder {
     color: #a4a4a4 !important;
+  }
+}
+
+::ng-deep .cdk-overlay-container {
+  @media (max-width: 860px) {
+    z-index: 2000 !important;
   }
 }
 
