--- a/src/app/main-content/videoplayer/videoplayer.component.scss
+++ b/src/app/main-content/videoplayer/videoplayer.component.scss
@@ -12,6 +12,15 @@
       border: none;
       border-radius: 0px;
     }
+    @media (max-width: 500px) {
+      height: 364px;
+    }
+    @media (max-width: 400px) {
+      height: 280px;
+    }
+    @media (max-width: 375px) {
+      height: 224px;
+    }
     > .vplayer-head {
       position: absolute;
       top: 0;
@@ -124,6 +133,17 @@
               font-size: 48px;
               height: 48px;
               width: 48px;
+              @media (max-width: 900px) {
+                border: none;
+                font-size: 40px;
+                height: 40px;
+                width: 40px;
+              }
+              @media (max-width: 650px) {
+                height: 32px;
+                width: 32px;
+                font-size: 32px;
+              }
               &:hover {
                 cursor: pointer;
                 color: rgba($color: #ffffff, $alpha: 0.5);
@@ -135,6 +155,14 @@
             position: absolute;
             bottom: 25px;
             left: 280px;
+            @media (max-width: 900px) {
+              bottom: 105px;
+              left: 152px;
+              rotate: -90deg;
+            }
+            @media (max-width: 650px) {
+              display: none;
+            }
           }
           > .quality {
             position: absolute;
@@ -174,6 +202,9 @@
       @include dFlex(row, space-between, center);
       width: 100%;
       margin-bottom: 64px;
+      @media (max-width: 500px) {
+        margin-bottom: 32px;
+      }
       > span {
         color: #ffffff;
         margin: 0px 16px;
@@ -190,6 +221,9 @@
       margin-right: 16px;
       color: #ffffff;
       font-weight: 500;
+      @media (max-width: 500px) {
+        font-size: 18px;
+      }
     }
   }
 }
@@ -204,6 +238,17 @@
     width: 48px;
     font-size: 48px;
     color: #ffffff;
+    @media (max-width: 900px) {
+      border: none;
+      font-size: 40px;
+      height: 40px;
+      width: 40px;
+    }
+    @media (max-width: 650px) {
+      height: 32px;
+      width: 32px;
+      font-size: 32px;
+    }
     &:hover {
       color: #2e3edf;
       cursor: pointer;
@@ -211,6 +256,18 @@
   }
   > img {
     height: 48px;
+    @media (max-width: 900px) {
+      height: 40px;
+    }
+    @media (max-width: 650px) {
+      height: 32px;
+    }
+  }
+}
+
+.mobile-none {
+  @media (max-width: 650px) {
+    display: none;
   }
 }
 
@@ -218,6 +275,23 @@
   color: #ffffff;
   font-size: 24px;
   font-weight: 700;
+  @media (max-width: 900px) {
+    font-size: 20px;
+  }
+  @media (max-width: 650px) {
+    display: none;
+  }
+}
+
+.mobile-title-txt {
+  display: none;
+  color: #ffffff;
+  font-size: 24px;
+  font-weight: 700;
+  @media (max-width: 650px) {
+    font-size: 20px;
+    display: block;
+  }
 }
 
 .fade-out {
