--- a/src/app/main-content/main/main.component.html
+++ b/src/app/main-content/main/main.component.html
@@ -22,11 +22,11 @@
     </div>
   </div>
 
-  <div *ngIf="this.globals.isUploadOpen()" class="video-overlay">
+  <!-- <div *ngIf="this.globals.isUploadOpen()" class="video-overlay">
     <div class="v-overlay-container">
       <app-file-upload></app-file-upload>
     </div>
-  </div>
+  </div> -->
 
   <app-footer [isMain]="true"></app-footer>
 </section>
