--- a/src/styles.scss
+++ b/src/styles.scss
@@ -148,6 +148,12 @@ app-ppolicy {
   justify-content: center;
 }
 
+app-terms-of-use {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
 //Profile Section 
 
 app-file-upload {
