--- a/src/app/main-content/videoplayer/videoplayer.component.html
+++ b/src/app/main-content/videoplayer/videoplayer.component.html
@@ -15,6 +15,12 @@
     </video>
 
     <div class="video-gradient-mobile"></div>
+    <div *ngIf="is480p && isVidFullScreen" class="quality480p-msg">
+      <span >Video optimiert für 480p</span>
+    </div>
+    <div *ngIf="!is480p && isVidFullScreen" class="quality1080p-msg">
+      <span >Video optimiert für 1080p</span>
+    </div>
 
     <div  [ngClass]="{
     'vplayer-bottom-btn': true,
@@ -32,13 +38,14 @@
       </div>
       <!-- player overlay back btn -->
       <div *ngIf="isVidFullScreen" (click)="closeFullscreen()" class="overlay-b-btn">
+        
         <mat-icon>arrow_back</mat-icon>
         <span class="mobile-title-txt"> {{ globals.currentOpenedVideo()?.title }} </span>
         <img src="./assets/logos/Symbol.png" alt="FlixLogo">
       </div>
+      
       <!-- videoplayer overlay -->
       <div class="overlay full" *ngIf="isVidFullScreen">
-        
         <div class="bar-cont progressbar">
           <input type="range" class="progres-bar" (input)="seek($event)" min="0" [max]="videoDuration * 1000" [value]="currentTime * 1000">
           <span>{{ formatVideoDuration(videoDuration - currentTime) }}</span>
@@ -56,7 +63,7 @@
 
           <div class="btns">
             <mat-icon (click)="toggleQualiPicker()">tune</mat-icon>
-            <mat-icon (click)="restartVideo()">restart_alt</mat-icon>
+            <mat-icon (click)="forceRestart()">restart_alt</mat-icon>
             <mat-icon (click)="toggleFullscreen()">fullscreen</mat-icon>
           </div>
 
