--- a/src/app/main-content/videoplayer/videoplayer.component.scss
+++ b/src/app/main-content/videoplayer/videoplayer.component.scss
@@ -41,7 +41,7 @@
       border-top-right-radius: 6px;
       border-top-left-radius: 6px;
       width: 900px;
-      height: 509px;
+      // height: 509px;
       @media (max-width: 860px) {
         width: 100%;
         height: 100%;
@@ -316,7 +316,7 @@
 .video-gradient-mobile {
   position: absolute;
   top: 0;
-  bottom: 0;
+  bottom: -10px;
   left: 0;
   right: 0;
   background: linear-gradient(
@@ -324,6 +324,34 @@
     rgba(20, 20, 20, 0),
     rgba(20, 20, 20, 1)
   );
+}
+
+.quality480p-msg {
+  position: absolute;
+  z-index: 1;
+  top: 100px;
+  left: 45%;
+  animation: fadeOut 3s forwards;
+  animation-delay: 3s;
+  > span {
+    color: #ffffff;
+  }
+}
+.quality1080p-msg {
+  position: absolute;
+  z-index: 1;
+  top: 100px;
+  left: 45%;
+  animation: fadeOut 3s forwards;
+  animation-delay: 3s;
+  > span {
+    color: #ffffff;
+  }
+}
+
+@keyframes fadeOut {
+  from {opacity: 1;}
+  to {opacity: 0;}
 }
 
 .progressbar {
