hotfix for terms routing

--- a/src/app/foot/terms-of-use/terms-of-use.component.html
+++ b/src/app/foot/terms-of-use/terms-of-use.component.html
@@ -32,7 +32,7 @@
     Hochgeladene Videos werden verarbeitet (z. B. Konvertierung auf 480p). Mit
     dem Upload erklärt sich der Nutzer mit der Verarbeitung der Inhalte gemäß
     der
-    <a href="/videoflix/ppolicy" target="_blank" rel="noopener noreferrer"
+    <a [routerLink]="['/policy']" rel="noopener noreferrer"
       >Datenschutzerklärung</a
     >
     einverstanden.
