--- a/src/app/main-content/profile/file-upload/file-upload.component.html
+++ b/src/app/main-content/profile/file-upload/file-upload.component.html
@@ -110,7 +110,7 @@
 
 <div class="upload-hints">
   <p class="terms">
-    Mit dem Hochladen bestätigst du, dass du die <a href="/videoflix/terms">Nutzungsbedingungen</a> und die <a href="/videoflix/policy">Datenschutzbestimmungen</a> gelesen und akzeptiert hast.
+    Mit dem Hochladen bestätigst du, dass du die <a [routerLink]="['/terms']">Nutzungsbedingungen</a> und die <a [routerLink]="['/policy']">Datenschutzbestimmungen</a> gelesen und akzeptiert hast.
   </p>
   <h3>Hinweise zum Upload</h3>
   <ul>
