grow-shadow fix for a single item, preview video can now be played, added action and drone categorys

--- a/src/app/main-content/main/main.component.html
+++ b/src/app/main-content/main/main.component.html
@@ -4,13 +4,14 @@
   <div class="preview-description">
     <h1>Breakout</h1>
     <span>
-      In a high-security prison, a wrongly convicted man formulates a meticulous <br>
-      plan to break out and prove his innocence. He must navigate a web of <br>
-      alliances and betrayals to reclaim his freedom and expose the truth. <br>
+      In einem Hochsicherheitsgefängnis schmiedet ein zu Unrecht verurteilter <br>
+      Mann einen akribischen Plan, um auszubrechen und seine Unschuld zu <br>
+      beweisen. Dabei muss er ein Netz aus Allianzen und Verrat durchqueren, um <br>
+      seine Freiheit zurückzugewinnen und die Wahrheit ans Licht zu bringen. <br>
     </span>
-    <div class="play-btn">
-        <mat-icon>play_arrow</mat-icon>
-        <span>Abspielen</span>
+    <div (click)="openPreviewVideo()" class="play-btn">
+      <mat-icon>play_arrow</mat-icon>
+      <span>Abspielen</span>
     </div>
   </div>
 
