--- a/src/app/main-content/slider-comp/slider-comp.component.scss
+++ b/src/app/main-content/slider-comp/slider-comp.component.scss
@@ -75,7 +75,7 @@ section {
                 z-index: 10;
                 @media (max-width: 1160px) {
                   -webkit-transform: scale(1.2);
-                transform: scale(1.2);
+                  transform: scale(1.2);
                 }
               }
             }
@@ -89,7 +89,7 @@ section {
                   z-index: 10;
                   @media (max-width: 1160px) {
                     -webkit-transform: scale(1.2) translateX(30px);
-                  transform: scale(1.2) translateX(30px);
+                    transform: scale(1.2) translateX(30px);
                   }
                 }
               }
@@ -104,7 +104,7 @@ section {
                   z-index: 10;
                   @media (max-width: 1160px) {
                     -webkit-transform: scale(1.2) translateX(-30px);
-                  transform: scale(1.2) translateX(-30px);
+                    transform: scale(1.2) translateX(-30px);
                   }
                 }
               }
@@ -181,4 +181,30 @@ app-video-item {
 
 .invis {
   opacity: 0;
+}
+
+
+.grow-shadow-single {
+  display: flex;
+  position: relative;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+  border-radius: 4px;
+  &:hover {
+    box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
+      -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.5) translateX(60px);
+    transform: scale(1.5) translateX(60px);
+    z-index: 10;
+    @media (max-width: 1160px) {
+      -webkit-transform: scale(1.2) translateX(30px);
+      transform: scale(1.2) translateX(30px);
+    }
+  }
 }
