--- a/src/app/main-content/videoplayer/videoplayer.component.scss
+++ b/src/app/main-content/videoplayer/videoplayer.component.scss
@@ -41,7 +41,7 @@
       border-top-right-radius: 6px;
       border-top-left-radius: 6px;
       width: 900px;
-      // height: 509px;
+      max-height: 508px;
       @media (max-width: 860px) {
         width: 100%;
         height: 100%;
@@ -59,6 +59,10 @@
         padding: 4px 16px;
         max-width: 100%;
         margin-bottom: 4px;
+        @media (max-width: 420px) {
+          gap: 16px;
+          justify-content: flex-start;
+        }
       }
       > .play {
         > button {
@@ -198,6 +202,7 @@
   > .vplayer-foot {
     @include dFlex(column, center, flex-start);
     width: 100%;
+    margin-bottom: 24px;
     > div {
       @include dFlex(row, space-between, center);
       width: 100%;
