hotfix for gradient at fullscreen videoplayer mode

--- a/src/app/main-content/videoplayer/videoplayer.component.html
+++ b/src/app/main-content/videoplayer/videoplayer.component.html
@@ -14,7 +14,7 @@
       Dein Browser unterstuetzt das Format nicht
     </video>
 
-    <div class="video-gradient-mobile"></div>
+    <!-- <div class="video-gradient-mobile"></div> -->
     <div *ngIf="is480p && isVidFullScreen" class="quality480p-msg">
       <span >Video optimiert für 480p</span>
     </div>
