changed mail addresses at imprint and policy. changed initial video quali to 1080p

--- a/src/app/authentication/registration/step-0/step-0.component.html
+++ b/src/app/authentication/registration/step-0/step-0.component.html
@@ -4,7 +4,7 @@
   <h2>Einrichtung Ihres Kontos abschliessen</h2>
   <p>
     VideoFlix wird individuell für dich angepasst. <br> Erstelle ein
-    Passwort, um Netflix zu nutzen.
+    Passwort, um VideoFlix zu nutzen.
   </p>
   <div (click)="nextStep()" class="continue-btn">
     <span>Weiter</span>
