--- a/src/app/foot/imprint/imprint.component.html
+++ b/src/app/foot/imprint/imprint.component.html
@@ -13,7 +13,7 @@
     <div class="first">
       <h4>Kontakt</h4>
       <span>Mobil: 017664370553</span>
-      <span>E-Mail: bastiwolff432&#64;gmail.com</span>
+      <span>E-Mail: kontakt&#64;bastian-wolff.de</span>
       <a href="https://www.e-recht24.de">e-recht24.de</a>
     </div>
   </div>
