--- a/src/app/main-content/slider-comp/slider-comp.component.html
+++ b/src/app/main-content/slider-comp/slider-comp.component.html
@@ -1,183 +1,31 @@
 <section class="slider-cont">
-
-  <div class="category-container">
-    <h2>Neu auf VideoFlix</h2>
+  <div *ngFor="let category of categories; let i = index" class="category-container"
+       [ngClass]="{ 'hidden': category.numberOfPacks.length === 0 && category.name !== 'Watched' || 
+                    category.name === 'Watched' && !globals.currentLoggedUser()?.video_timestamps }">
+    <h2>{{ category.name }}</h2>
     <div class="scroll-container">
-      <div class="scroll-button left" [ngClass]="numberOfPacks.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('+', 'category1')">
+      <div class="scroll-button left" [ngClass]="category.numberOfPacks.length > 1 ? 'slider-btn-opacity' : 'invis'">
+        <button (click)="nextVideos('+', i)">
           <mat-icon>chevron_left</mat-icon>
         </button>
       </div>
-      <div class="content-container" #category1>
-        <div class="video-container" *ngFor="let groupKey of numberOfPacks; let groupIndex = index" 
-        [ngClass]="groupedSliderVids[groupKey].length === videoItemCardsAmount ? 'evenly-spacing' : 'start-spacing'">
-          <div class="item" *ngFor="let item of groupedSliderVids[groupKey]; let i = index">
+      <div class="content-container" #categoryRef>
+        <div class="video-container" *ngFor="let groupKey of category.numberOfPacks; let groupIndex = index"
+             [ngClass]="category.groupedVideos[groupKey].length === videoItemCardsAmount ? 'evenly-spacing' : 'start-spacing'">
+          <div class="item" *ngFor="let item of category.groupedVideos[groupKey]; let j = index">
             <app-video-item
-              (mouseover)="hoveredIndex1 = i"
-              (mouseleave)="hoveredIndex1 = -1"
-              [ngClass]="groupedSliderVids[groupKey].length === 1 ? 'grow-shadow-single' : 'grow-shadow'"
+              (mouseover)="category.hoveredIndex = j"
+              (mouseleave)="category.hoveredIndex = -1"
+              [ngClass]="category.groupedVideos[groupKey].length === 1 ? 'grow-shadow-single' : 'grow-shadow'"
               [videoItem]="item"
-              [isHovered]="hoveredIndex1 === i" 
+              [isVideosWatched]="category.name === 'Watched'"
+              [isHovered]="category.hoveredIndex === j"
             ></app-video-item>
           </div>
         </div>
       </div>
-      <div class="scroll-button right" [ngClass]="numberOfPacks.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('-', 'category1')">
-          <mat-icon>chevron_right</mat-icon>
-        </button>
-      </div>
-    </div>
-  </div>
-
-
-  <div *ngIf="globals.currentLoggedUser()?.video_timestamps" class="category-container">
-    <h2>Weiterschauen</h2>
-    <div class="scroll-container">
-      <div class="scroll-button left" [ngClass]="numberOfPacksWatched.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('+', 'category4')">
-          <mat-icon>chevron_left</mat-icon>
-        </button>
-      </div>
-      <div class="content-container" #category4>
-        <div class="video-container" *ngFor="let groupKey of numberOfPacksWatched; let groupIndex = index" 
-        [ngClass]="groupedSliderVidsWatched[groupKey].length === videoItemCardsAmount ? 'evenly-spacing' : 'start-spacing'">
-          <div class="item" *ngFor="let item of groupedSliderVidsWatched[groupKey]; let i = index">
-            <app-video-item
-              (mouseover)="hoveredIndex4 = i"
-              (mouseleave)="hoveredIndex4 = -1"
-              [ngClass]="groupedSliderVidsWatched[groupKey].length === 1 ? 'grow-shadow-single' : 'grow-shadow'"
-              [videoItem]="item"
-              [isVideosWatched]="true"
-              [isHovered]="hoveredIndex4 === i" 
-            ></app-video-item>
-          </div>
-        </div>
-      </div>
-      <div class="scroll-button right" [ngClass]="numberOfPacksWatched.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('-', 'category4')">
-          <mat-icon>chevron_right</mat-icon>
-        </button>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="category-container" *ngIf="numberOfPacksDocumentation.length > 0">
-    <h2>Dokumentation</h2>
-    <div class="scroll-container">
-      <div class="scroll-button left" [ngClass]="numberOfPacksDocumentation.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('+', 'category2')">
-          <mat-icon>chevron_left</mat-icon>
-        </button>
-      </div>
-      <div class="content-container" #category2>
-        <div class="video-container" *ngFor="let groupKey of numberOfPacksDocumentation; let groupIndex = index"
-        [ngClass]="groupedSliderVidsDocumentation[groupKey].length === videoItemCardsAmount ? 'evenly-spacing' : 'start-spacing'">
-          <div class="item" *ngFor="let item of groupedSliderVidsDocumentation[groupKey]; let i = index">
-            <app-video-item
-              (mouseover)="hoveredIndex2 = i"
-              (mouseleave)="hoveredIndex2 = -1"
-              [ngClass]="groupedSliderVidsDocumentation[groupKey].length === 1 ? 'grow-shadow-single' : 'grow-shadow'"
-              [videoItem]="item"
-              [isHovered]="hoveredIndex2 === i" 
-            ></app-video-item>
-          </div>
-        </div>
-      </div>
-      <div class="scroll-button right" [ngClass]="numberOfPacksDocumentation.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('-', 'category2')">
-          <mat-icon>chevron_right</mat-icon>
-        </button>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="category-container" *ngIf="numberOfPacksDrama.length > 0">
-    <h2>Drama</h2>
-    <div class="scroll-container">
-      <div class="scroll-button left" [ngClass]="numberOfPacksDrama.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('+', 'category3')">
-          <mat-icon>chevron_left</mat-icon>
-        </button>
-      </div>
-      <div class="content-container" #category3>
-        <div class="video-container" *ngFor="let groupKey of numberOfPacksDrama; let groupIndex = index"
-        [ngClass]="groupedSliderVidsDrama[groupKey].length === videoItemCardsAmount ? 'evenly-spacing' : 'start-spacing'">
-          <div class="item" *ngFor="let item of groupedSliderVidsDrama[groupKey]; let i = index">
-            <app-video-item
-              (mouseover)="hoveredIndex3 = i"
-              (mouseleave)="hoveredIndex3 = -1"
-              [ngClass]="groupedSliderVidsDrama[groupKey].length === 1 ? 'grow-shadow-single' : 'grow-shadow'"
-              [videoItem]="item"
-              [isHovered]="hoveredIndex3 === i" 
-            ></app-video-item>
-          </div>
-        </div>
-      </div>
-      <div class="scroll-button right" [ngClass]="numberOfPacksDrama.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('-', 'category3')">
-          <mat-icon>chevron_right</mat-icon>
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <div class="category-container" *ngIf="numberOfPacksAction.length > 0">
-    <h2>Action</h2>
-    <div class="scroll-container">
-      <div class="scroll-button left" [ngClass]="numberOfPacksAction.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('+', 'category5')">
-          <mat-icon>chevron_left</mat-icon>
-        </button>
-      </div>
-      <div class="content-container" #category3>
-        <div class="video-container" *ngFor="let groupKey of numberOfPacksAction; let groupIndex = index"
-        [ngClass]="groupedSliderVidsAction[groupKey].length === videoItemCardsAmount ? 'evenly-spacing' : 'start-spacing'">
-          <div class="item" *ngFor="let item of groupedSliderVidsAction[groupKey]; let i = index">
-            <app-video-item
-              (mouseover)="hoveredIndex5 = i"
-              (mouseleave)="hoveredIndex5 = -1"
-              [ngClass]="groupedSliderVidsAction[groupKey].length === 1 ? 'grow-shadow-single' : 'grow-shadow'"
-              [videoItem]="item"
-              [isHovered]="hoveredIndex5 === i" 
-            ></app-video-item>
-          </div>
-        </div>
-      </div>
-      <div class="scroll-button right" [ngClass]="numberOfPacksAction.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('-', 'category5')">
-          <mat-icon>chevron_right</mat-icon>
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <div class="category-container" *ngIf="numberOfPacksDrone.length > 0">
-    <h2>Drohne</h2>
-    <div class="scroll-container">
-      <div class="scroll-button left" [ngClass]="numberOfPacksDrone.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('+', 'category6')">
-          <mat-icon>chevron_left</mat-icon>
-        </button>
-      </div>
-      <div class="content-container" #category3>
-        <div class="video-container" *ngFor="let groupKey of numberOfPacksDrone; let groupIndex = index"
-        [ngClass]="groupedSliderVidsDrone[groupKey].length === videoItemCardsAmount ? 'evenly-spacing' : 'start-spacing'">
-          <div class="item" *ngFor="let item of groupedSliderVidsDrone[groupKey]; let i = index">
-            <app-video-item
-              (mouseover)="hoveredIndex6 = i"
-              (mouseleave)="hoveredIndex6 = -1"
-              [ngClass]="groupedSliderVidsDrone[groupKey].length === 1 ? 'grow-shadow-single' : 'grow-shadow'"
-              [videoItem]="item"
-              [isHovered]="hoveredIndex6 === i" 
-            ></app-video-item>
-          </div>
-        </div>
-      </div>
-      <div class="scroll-button right" [ngClass]="numberOfPacksDrone.length > 1 ? 'slider-btn-opacity' : 'invis'">
-        <button (click)="nextVideos('-', 'category6')">
+      <div class="scroll-button right" [ngClass]="category.numberOfPacks.length > 1 ? 'slider-btn-opacity' : 'invis'">
+        <button (click)="nextVideos('-', i)">
           <mat-icon>chevron_right</mat-icon>
         </button>
       </div>
@@ -185,11 +33,12 @@
   </div>
 
   <ngx-spinner
-  bdColor="rgba(0, 0, 0, 0.8)"
-  size="medium"
-  color="#fff"
-  type="square-jelly-box"
-  [fullScreen]="true"
-  ><p style="color: white">Bitte einen Moment Geduld...</p></ngx-spinner>
-
+    bdColor="rgba(0, 0, 0, 0.8)"
+    size="medium"
+    color="#fff"
+    type="square-jelly-box"
+    [fullScreen]="true"
+  >
+    <p style="color: white">Bitte einen Moment Geduld...</p>
+  </ngx-spinner>
 </section>
